fix for footer overlap on index page

--- a/scss/partials/_front_page.scss
+++ b/scss/partials/_front_page.scss
@@ -56,10 +56,7 @@
 
   .blog-feed {
     grid-area: content;
-
-    @include mq-phone-layout {
-      padding-bottom: $large-gap*2;
-    };
+    padding-bottom: $large-gap*2;
 
     .blog-snippet {
       display: flex;
